# gotofritz_fund_manager

./: .coverage  .flake8  .gitignore  README.md  Taskfile.yml  db.sqlite3  manage.py  pyproject.toml  requirements-test.txt  requirements.txt
demo/: exceptions.py  forms.py  models.py  serializers.py  services.py  tables.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_alter_fund_aum_usd_alter_fund_inception_date.py  0003_alter_fund_aum_usd.py  0004_alter_fund_strategy.py
demo/static/demo/css/: stylesheet.css
demo/templates/demo/: upload.html
demo/tests/test_rest_views/: test_active_funds_list.py  test_single_fund.py
demo/views/: __init__.py  rest_views.py  tables.py  web_views.py
gotofritz_fund_manager/: asgi.py  db.sqlite3  urls.py  wsgi.py
gotofritz_fund_manager/settings/: base.py  local.py  production.py
scripts/: another2.csv  empty.csv  generate_fake_data.py  goodman.csv  long.csv  original.csv  some.csv
static/css/: stylesheet.css
templates/: base.html  masthead.html
templates/django_tables2/: gotofritz.html
